test/scc_test/exp/semantic-errors/020.a
020.t:4:6: error: expression must have scalar type